--- a/src/sequential/meson.build
+++ b/src/sequential/meson.build
@@ -1,12 +1,12 @@
-project('des-calculator-seq', 'c',
+project('des-finder-seq', 'c',
   version : '0.1',
   default_options : ['warning_level=3'])
 
 incdir = include_directories('../common')
 
-sources = ['main.c']
+sources = ['main.c', '../common/log.c']
 
-executable('des-calculator-seq',
+executable('des-finder-seq',
            [sources],
            install : true,
            include_directories : incdir,
