--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,7 +27,7 @@
         {
             "label": "Run dictionary generator",
             "type": "shell",
-            "command": "cd src/dictionary-generator/builddir && ./dictionary-generator",
+            "command": "cd src/dictionary-generator/builddir && ./dictionary-generator 1000",
             "problemMatcher": []
         },
         {
