[ADD] Added sequential dictionary generation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,10 @@
             "name": "Build and debug parallel program",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/src/parallel/builddir/des-finder-parallel",
-            "args": ["saLpqprs6OBGs", "sa", "-t", "8"],
+            //"program": "${workspaceFolder}/src/parallel/builddir/des-finder-parallel",
+            //"args": ["saLpqprs6OBGs", "sa", "-t", "8"],
+            "program": "${workspaceFolder}/src/dictionary-generator/builddir/dictionary-generator",
+            "args": ["10", "-s"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/src/parallel/builddir",
             "environment": [],
